Added  new changes

--- a/Test2.html
+++ b/Test2.html
@@ -4,8 +4,6 @@
     </title>
     <header></header>
     <body>
-        <h2>This is second html</h2>
-        <h3>This is the new change set</h3>
-        <h4>This  is change for bug branch</h4>
+     <h2>New change set</h2>
     </body>
 </html5>
